immich/immich-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.1
  namespace: immich
spec:
  type: NodePort
  ports:
    - port: 2283
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30009
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
