immich/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    helm.sh/chart: immich-0.10.1
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres-port
  selector:
    app: postgres
